<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/white"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/camera_add_activity_editroom"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <RelativeLayout
                android:id="@+id/camera_add_activity_editroom_nameroom"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/camera_add_activity_editroom_nameroom_label"
                    style="@style/add_label_style"
                    android:text="@string/add_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/camera_add_activity_editroom_nameroom_edit"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/add_edit_style"
                    android:maxLines="1"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:layout_centerVertical="true"
                    android:padding="9dp"
                    android:hint="@string/add_edit_name_hint"
                    android:textSize="16sp"
                    android:textColor="@color/black_565656"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/camera_add_activity_editroom_iproom"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/camera_add_activity_editroom_iproom_label"
                    style="@style/add_label_style"
                    android:text="@string/add_IP_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/camera_add_activity_editroom_iproom_edit"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/add_edit_style"
                    android:layout_centerVertical="true"
                    android:padding="9dp"
                    android:hint="@string/add_edit_ip_hint"
                    android:textSize="16sp"
                    android:textColor="@color/black_565656"
                    android:textCursorDrawable="@color/black_565656"
                    android:maxLines="1"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/camera_add_activity_editroom_portroom"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/camera_add_activity_editroom_portroom_label"
                    style="@style/add_label_style"
                    android:text="@string/add_port_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/camera_add_activity_editroom_portroom_edit"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/add_edit_style"
                    android:layout_centerVertical="true"
                    android:padding="9dp"
                    android:hint="@string/add_edit_port_hint"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:textColor="@color/black_565656"
                    android:textCursorDrawable="@color/black_565656"
                    android:maxLines="1"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/camera_add_activity_editroom_backstringroom"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/camera_add_activity_editroom_backstringroom_label"
                    style="@style/add_label_style"
                    android:text="@string/add_backstring_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/camera_add_activity_editroom_backstringoom_edit"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/add_edit_style"
                    android:layout_centerVertical="true"
                    android:padding="9dp"
                    android:hint="@string/add_edit_backstring_hint"
                    android:textSize="16sp"
                    android:textColor="@color/black_565656"
                    android:textCursorDrawable="@color/black_565656"
                    android:maxLines="1"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>


        </LinearLayout>

    <RelativeLayout
        android:id="@+id/camera_add_activity_btnroom"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/camera_add_activity_btnroom_savebtn"
            style="@style/btn_text_noFrame_style"
            android:layout_alignParentRight="true"
            android:text="@string/btn_save"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/camera_add_activity_btnroom_cancelbtn"
            style="@style/btn_text_noFrame_style"
            android:layout_toLeftOf="@+id/camera_add_activity_btnroom_savebtn"
            android:text="@string/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</LinearLayout>