<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:zhy="http://schemas.android.com/apk/res-auto"
              android:background="@color/white"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--<GridView-->
        <!--android:id="@+id/camera_list_activity_grid"-->
        <!--android:numColumns="4"-->
        <!--android:verticalSpacing="9dp"-->
        <!--android:horizontalSpacing="9dp"-->
        <!--android:layout_weight="4"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"/>-->
    <ScrollView
        android:id="@+id/camera_list_activity_scroll"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.testone.coffee.testone.view.ui.flowlayout.TagFlowLayout
            zhy:max_select="1"
            android:id="@+id/camera_list_activity_tagLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>
    <LinearLayout
        android:id="@+id/camera_list_activity_btnroom"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/camera_list_activity_btnroom_addBtn"
            style="@style/btn_text_style"
            android:text="@string/btn_add"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/camera_list_activity_btnroom_delBtn"
            style="@style/btn_text_style"
            android:text="@string/btn_del"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/camera_list_activity_btnroom_watchBtn"
            style="@style/btn_text_style"
            android:text="@string/btn_watch"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>