<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:id="@+id/camera_play_activity_main"
                android:background="@color/black_565656"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <VideoView
        android:id="@+id/camera_play_activity_videoView"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <!--<SurfaceView-->
        <!--android:id="@+id/camera_play_activity_surface"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->

    <TextView
        android:id="@+id/camera_play_activity_nameLabel"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/play_name_bacground"
        android:padding="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/camera_play_activity_timeLabel"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/play_name_bacground"
        android:layout_width="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/camera_play_activity_btnplate"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:background="@drawable/play_name_bacground"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/camera_play_activity_audioBtn"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/play_btn_audio"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/camera_play_activity_recordBtn"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/play_btn_record"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/camera_play_activity_switchBtn"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:text="@string/play_btn_switch"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>


</RelativeLayout>